--- a/versions.toml
+++ b/versions.toml
@@ -1,12 +1,17 @@
 [versions]
-minecraft = "1.18.2"
-mappings-build = "23"
-fabric-loader = "0.14.9"
-fabric-api = "0.57.0+1.18.2"
-lazy-dfu = "0.1.2"
+minecraft = "1.19.3"
+quilt-mappings = "1.19.3+build.3"
+fabric-loader = "0.14.11"
+fabric-api = "0.69.1+1.19.3"
+lazy-dfu = "0.1.3"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
+quilt-mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "quilt-mappings" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabric-loader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
-runtime-lazy-dfu = { module = "maven.modrinth:lazydfu", version.ref = "lazy-dfu" }
+lazy-dfu = { module = "maven.modrinth:lazydfu", version.ref = "lazy-dfu" }
+
+[bundles]
+required = ["fabric-loader", "fabric-api"]
+runtime = ["lazy-dfu"]
